--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -2,16 +2,18 @@ silent: false
 autoCloseIssue: true
 branchName: 'issue-${issue.number}-${issue.title}'
 branches:
-  - label: enhancement
-    prefix: feature/
   - label: bug
-    prefix: bugfix/
+    prefix: bug/
+  - label: dependency
+    prefix: dependency/
   - label: documentation
-    prefix: document/
-  - label: quality
-    prefix: quality/
+    prefix: documentation/
+  - label: feature
+    prefix: feature/
   - label: hotfix
     prefix: hotfix/
     name: master
+  - label: quality
+    prefix: quality/
   - label: '*'
     prefix: issues/
