--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,5 +1,6 @@
-enhancement: 'feature/*'
-bug: 'bugfix/*'
-documentation: 'document/*'
-quality: 'quality/*'
+bug: 'bug/*'
+dependency: 'dependency/*'
+documentation: 'documentation/*'
+feature: 'feature/*'
 hotfix: 'hotfix/*'
+quality: 'quality/*'
