--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -1,6 +1,8 @@
 silent: false
 autoCloseIssue: false
-branchName: '${issue.title}#${issue.number}'
+
+branchName: '${issue.title,}'
+gitSafeReplacementChar: '-'
 
 branches:
   - label: bug
